--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,6 @@
 <%= f.label :name %>
 <%= f.text_field :name %>
 <%= f.label :password %>
-<%= f.text_field :password%>
-<%= f.submit_tag 'Create User' %>
+<%= f.password_field :password %>
+<%= f.submit 'Create User' %>
 <% end %>
