fix flight controller

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <h2><%= @user.name %></h2>
 
 
-<%= button_to "Check Out Flights!", book_trip_path %> 
+<%= button_to "Check Out Flights!", new_trip_path %> 
