--- a/app/views/flights/new_trip.html.erb
+++ b/app/views/flights/new_trip.html.erb
@@ -1,12 +1,13 @@
-<%= form_for @flight do |f| %>
+<%= form_tag("/search_results", method: "get") do %>
 <p> What's your budget? </p>
-<p><%= f.text_field_tag '@user[budget]' %></p>
-<p> Where are you flying from? </p>
-<p><%= f.text_field_tag '@user[][city]' %></p>
-<p> What's your departure date? </p>
-<%= f.text_field_tag '@user[departure]' %>
-<p> What's your return date? </p>
-<%= f.text_field_tag '@user[return]' %> 
 
-<%= f.submit 'Find Flights' %>
+<p><%= text_field_tag :budget %></p>
+<p> Where are you flying from? </p>
+<p><%= text_field_tag 'user[budget]' %></p>
+<p> What's your departure date? </p>
+<%= text_field_tag :departure %>
+<p> What's your return date? </p>
+<%= text_field_tag :return %> 
+
+<%= button_to 'Find Flights', search_results_path %>
 <% end %>
