changed route for post session#create, modified signin page

--- a/app/views/flights/new_trip.html.erb
+++ b/app/views/flights/new_trip.html.erb
@@ -5,7 +5,7 @@
 <p> Where are you flying from? </p>
 <p><%= text_field_tag 'user[city]'  %></p>
 <p> What's your departure date? </p>
-<%= text_field_tag 'user[departure]', %>
+<%= text_field_tag 'user[departure]' %>
 <p> What's your return date? </p>
 <%= text_field_tag 'user[return]' %> 
 
