--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
   </head>
 
   <body>
+  <div class="container">
+    <ul class="nav nav-pills">
+      <li role="presentation" class="active"><a href="/">Home</a></li>
+      <li role="presentation"><a href="/users/new">Sign Up</a></li>
+      <li role="presentation"><a href="/signin">Sign In</a></li>
+      <li role="presentation"><a href="/new_trip">Book A Trip</a></li>
+    </ul>
+
+
     <%= yield %>
+    </div>
   </body>
 </html>
