fix header styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,13 @@
   </head>
 
   <body>
-  <div class="container">
-    <ul class="nav nav-pills">
-      <li role="presentation" class="active"><a href="/">Home</a></li>
-      <li role="presentation"><a href="/users/new">Sign Up</a></li>
-      <li role="presentation"><a href="/signin">Sign In</a></li>
-      <li role="presentation"><a href="/new_trip">Book A Trip</a></li>
-    </ul>
+  <div class="header">
+    <div class="center">
+      <p><a href="/">Home</a>
+      <a href="/users/new">Sign Up</a>
+      <a href="/signin">Sign In</a>
+      <a href="/new_trip">Book A Trip</a></p>
+    </div>
 
 
     <%= yield %>
