set up a basic login feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <ul class="nav nav-pills">
       <li role="presentation" class="active"><a href="/">Home</a></li>
       <li role="presentation"><a href="/users/new">Sign Up</a></li>
-      <li role="presentation"><a href="/signin">Sign In</a></li>
+      <li role="presentation"><a href="/login">Sign In</a></li>
       <li role="presentation"><a href="/new_trip">Book A Trip</a></li>
     </ul>
 
