add some validations to user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <div class="center">
       <p><a href="/">Home</a>
       <a href="/users/new">Sign Up</a>
-      <a href="/signin">Sign In</a>
+      <a href="/login">Sign In</a>
       <a href="/new_trip">Book A Trip</a></p>
     </div>
 
