--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,3 +22,5 @@ html, body { background: #fdf6ee; }
 h1 { font-family: 'Noto Sans', sans-serif; }
 h2 { font-family: 'Noto Sans', sans-serif; }
 p { font-family: 'Noto Sans', sans-serif; }
+
+*= require bootstrap-datepicker
