complete search query

--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -1,4 +1,4 @@
-<div class="center">
+<!-- <div class="center">
 <h2> Hey, <%= @user.name %> here are some options for you: </h2>
 
 <ul><% @flights.each_with_index do |flight, index| %>
@@ -6,3 +6,4 @@
 <% end %></ul>
 
 </div>
+ -->
