--- a/app/views/flights/new_trip.html.erb
+++ b/app/views/flights/new_trip.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("/search_results", method: "get") do %>
+<%= form_tag("/find_flights", method: "get") do %>
 <div class='center'
 <p> What's your budget? </p>
 
@@ -12,7 +12,7 @@
 
 <p><input type="text" data-provide='datepicker' name='user[return]' ></p>
 
-<%= button_to 'Find Flights', search_results_path %>
+<%= button_to 'Find Flights'%>
 <% end %>
 </div>
 
