--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -1,9 +1,16 @@
-<!-- <div class="center">
-<h2> Hey, <%= @user.name %> here are some options for you: </h2>
+<div class="center">
+  
 
-<ul><% @flights.each_with_index do |flight, index| %>
-<li><%= "#{index}. Destination: #{flight.arrival_airport.name} Cost: $#{flight.total}" %><%= link_to "Save Flight", user_path %></li>
-<% end %></ul>
 
-</div>
- -->
+<% @roundtripflight.each do |bigflightarray| %>
+  <% bigflightarray.each do |flightarray| %> 
+    <% flightarray.each do |flight| %> 
+      <li><%= "Flight Number: #{flight.flight_number}" %></li> 
+      <li><%= "Departure Date: #{flight.departure_date}" %></li> 
+      <li><%= "Arrival Date: #{flight.arrival_date}" %></li> <br>
+    <% end %> 
+  <% end %>
+<% end %>
+
+</div> 
+
