--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,12 @@
+<% if @user.errors.full_messages %>
+<ul>
+<% flash[:message].each do |error| %>
+  <li><%= error %></li>
+<% end %>
+</ul>
+<% end %>
+
+
 <% provide(:title, "Sign up form") %>
   <h1>Sign up</h1>
 <%= form_for @user do |f| %>
