--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,3 @@
-<% if @user.errors.full_messages %>
-<ul>
-<% flash[:message].each do |error| %>
-  <li><%= error %></li>
-<% end %>
-</ul>
-<% end %>
-
-
 <% provide(:title, "Sign up form") %>
   <h1>Sign up</h1>
 <%= form_for @user do |f| %>
@@ -15,4 +6,11 @@
 <%= f.label :password %>
 <%= f.password_field :password %><br>
 <%= f.submit 'Create User' %>
+<% if flash[:message] %>
+<ul>
+<% flash[:message].each do |error| %>
+  <li><%= error %></li>
+<% end %>
+</ul>
+<% end %>
 <% end %>
