--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
               <%= link_to "Profile", current_user %>
               <%= link_to "Log out", logout_path, method: "delete" %>
               <a href="/new_trip">Book A Trip</a>
+              <p><i><%= "#{@current_user.name} is logged into WanderList" %></i></p>
             <% else %>
               <a href="/users/new">Sign Up</a>
               <a href="/login">Sign In</a>
