--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -1,18 +1,10 @@
-<!-- Didn't include a submit button yet-->
-<!-- inspect element through the browser-->
-<!-- you will find the matching flights stored in the 'id' as a long string-->
-<!-- that happens because on line 10, 'flight_package'-->
-<!-- which stores each pair of flights that match our query-->
-<!--and the value aspect of radio is a string of two flight objects-->
-<!-- good luck and lmk if you have questions!! -->
-
 <div class="center">
   <%= form_tag({controller:"itineraries", action: "create"}, method: "post") do %>
     <% @roundtripflight.each do |flight_package| %>
      <br>
       <p>
-      <%= radio_button_tag(:flight_info, flight_package) %>
-      <%= label_tag(:flights, "choose this flight") %>
+      <%= radio_button_tag(:flight_ids, flight_package.map{|flight| flight.id}) %>
+      <%= label_tag(:flights, "Choose Flight") %>
       <% flight_package.each_with_index do |flight, index| %> 
       <h2> <%= "flight #{index+1}" %> </h2> 
         <p>Destination: <%= flight.arrival_city.name %> </p>
@@ -21,6 +13,7 @@
         <p> Price: <%= "$#{flight.price.round}" %> </p>
         <%end%>
     <% end %> 
+  <%= submit_tag ("Save flight") %> 
   <% end %>
 </div> 
 
