--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,17 +14,11 @@
  *= require_self
  */
 
-
 html, body { background: #fdf6ee; }
-.center {  text-align: center; }
-.container {
-  border: 2em; 
-  border-color: black;
-}
-
+/*.center {  text-align: center; }
 
 h1 { font-family: 'Noto Sans', sans-serif; }
 h2 { font-family: 'Noto Sans', sans-serif; }
-p { font-family: 'Noto Sans', sans-serif; }
+p { font-family: 'Noto Sans', sans-serif; }*/
 
 *= require bootstrap-datepicker
