cleaned up flight selection form

--- a/app/views/users/flights.html.erb
+++ b/app/views/users/flights.html.erb
@@ -2,7 +2,7 @@
 <h3> Saved Trips <h3>
 <ul>
 <% @user.itineraries.each_with_index do |package, index| %>
-  <li><p><%= "#{index+1}. From: #{package.departing_flight.departure_airport.city.name} To: #{package.return_flight.departure_airport.city.name}" %></p>
+  <li><p><%= "#{index+1}. From: #{package.departing_flight.departure_city.name} To: #{package.return_flight.departure_city.name}" %></p>
     <% total = package.departing_flight.price.to_i + package.return_flight.price.to_i %>
     <p>Price: $<%= "#{total}" %></p>
     <p>Dates: <%= package.departing_flight.departure_date %> To <%= package.return_flight.arrival_date %><p><br>
