--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,21 @@
 <% provide(:title, "Sign up form") %>
   <h1>Sign up</h1>
-<%= form_for @user do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %><br>
-  <%= f.label :password %>
-  <%= f.password_field :password %><br>
-  <%= f.submit 'Create User' %>
-  <% if flash[:message] %>
-    <ul>
-      <% flash[:message].each do |error| %>
-        <li><%= error %></li>
+  <div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for @user do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %><br>
+      <%= f.label :password %>
+      <%= f.password_field :password %><br>
+      <%= f.submit 'Create User' %>
+      <% if flash[:message] %>
+        <ul>
+          <% flash[:message].each do |error| %>
+            <li><%= error %></li>
+          <% end %>
+        </ul>
       <% end %>
-    </ul>
-  <% end %>
-<% end %>
+    <% end %>
+  </div>
+</div>
 
