--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -7,7 +7,10 @@
           <%= radio_button_tag(:flight_ids, flight_package.map{|flight| flight.id}) %>
           <%= label_tag(:flights, "Choose Flight") %>
           <% flight_package.each_with_index do |flight, index| %> 
-            <h2> <%= "flight #{index+1}" %> </h2> 
+            <br>
+            <% featuredimage= Unsplash::Photo.search(flight.arrival_city.name, page = 1, per_page = 1) %>
+            <img src= <%= featuredimage[0].urls["small"] + "/download" %> > 
+            <h1> <%= "Flight #{index+1}" %> </h1> 
             <p>Destination: <%= flight.arrival_city.name %> </p>
             <p> Date: <%= flight.arrival_date %> </p>
             <p> Flight Number: <%= flight.flight_number %> </p>
