--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,26 @@
  *= require_self
  */
 
+
+/* html, body { background: #fdf6ee; } */
+
 html, body { background: #fdf6ee; }
+
+
+.center {  width: 624px;
+   margin-left: auto;
+   margin-right: auto;
+   height: 395px; } 
+
+#container{
+   position: absolute;
+   top: 50%;
+   margin-top: -200px;/* half of #content height*/
+   left: 0;
+   width: 100%;
+}
+
+
 /*.center {  text-align: center; }
 
 h1 { font-family: 'Noto Sans', sans-serif; }
