--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,10 +20,10 @@
 html, body { background: #fdf6ee; }
 
 
-.center {  width: 624px;
+/*.center {  width: 624px;
    margin-left: auto;
    margin-right: auto;
-   height: 395px; } 
+   height: 395px; } */
 
 #container{
    position: absolute;
