--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -81,3 +81,12 @@ input, textarea, select, .uneditable-input {
   margin-bottom: 15px;
   @include box_sizing;
 }
+
+label {
+    background:#aaa;
+    color:#fff;
+    border-radius:8px;   
+    padding:.3em;
+    margin:.75em;
+    cursor:pointer;
+}
