--- a/app/views/users/flights.html.erb
+++ b/app/views/users/flights.html.erb
@@ -2,10 +2,9 @@
 <h3> Saved Trips <h3>
 <ul>
 <% @user.itineraries.each_with_index do |package, index| %>
-  <li><p><%= "#{index+1}. From: #{package.departing_flight.departure_city.name} To: #{package.return_flight.departure_city.name}" %></p>
-    <% total = package.departing_flight.price.to_i + package.return_flight.price.to_i %>
-    <p>Price: $<%= "#{total}" %></p>
-    <p>Dates: <%= package.departing_flight.departure_date %> To <%= package.return_flight.arrival_date %><p><br>
+  <li><p><%= "#{index+1}. From: #{package.departure_city} To: #{package.arrival_city}" %></p>
+    <p>Price: $<%= "#{package.total_price}" %></p>
+    <p>Dates: <%= package.departure_date %> To <%= package.return_date %><p><br>
   </li>
 <% end %>
  </ul>
