--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -79,14 +79,19 @@ input, textarea, select, .uneditable-input {
   padding: 10px;
   height: auto;
   margin-bottom: 15px;
+  border-radius: 10px;
   @include box_sizing;
 }
 
 label {
     background:#aaa;
     color:#fff;
-    border-radius:8px;   
+    border-radius:10px;   
     padding:.3em;
     margin:.75em;
     cursor:pointer;
+}
+
+img {
+  border-radius: 10px;
 }
