--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <header class ="navbar navbar-fixed-top navbar-invese">
+    <header class ="navbar navbar-fixed-top navbar-inverse" style="background-color: #C0C0C0; ">
       <div class="container">
       <%= link_to "WanderList", '/', id: "logo" %>
         <nav>
