--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
 <h2><%= @user.name %></h2>
 
-<%= link_to "Check Out Flights!", new_trip_path %> 
+<%= link_to "Take Me Somewhere", new_trip_path %> 
