--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,8 @@
 
 html, body { background: #fdf6ee; }
 
+/*body#landingpage { background: #C1666B; }*/
+
 
 /*.center {  width: 624px;
    margin-left: auto;
