--- a/app/views/flights/new_trip.html.erb
+++ b/app/views/flights/new_trip.html.erb
@@ -17,7 +17,9 @@
 
       <%= submit_tag("Find Flights")%>
       <% end %>
-      <p><%= flash[:notice] %></p>
+      <div id="error-message">
+        <p><%= flash[:notice] %></p>
+      </div>
     </div>
   </div>
 </div>
