--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -1,23 +1,19 @@
 <div class= "container-fluid">
   <%= form_tag({controller:"itineraries", action: "create"}, method: "post") do %>
     <div class="row">
-      <% @roundtripflight.each_with_index do |flight_package, index| %>
+      <% @parsed_quotes.each_with_index do |flight_package, index| %>
           <div class="col-md-6">
             <div class="whitebox">
               <h1> <%= "Package #{index+1}" %>  </h1>
-                <% featuredimage= Unsplash::Photo.search(flight_package[0].arrival_city.name, page = 1, per_page = 1) %>
-                <img src= <%= featuredimage[0].urls["small"] + "/download" %> > 
                 <div class= "p2">
-                Destination: <%= flight_package[0].arrival_city.name %> <br>
-                Departure Date: <%= flight_package[0].arrival_date %> <br>
-                Departure Flight Number: <%= flight_package[0].flight_number %> <br>
-                Return Date: <%= flight_package[1].arrival_date %><br>
-                Return Flight Number: <%= flight_package[1].flight_number %><br>
-                <% total = flight_package[0].price.to_i + flight_package[1].price.to_i %> 
-                Price : <%= "$ #{total}" %>
+                Destination: <%= flight_package["OutboundLeg"]["DestinationCity"] %> <br>
+                Departure Date: <%= flight_package["OutboundLeg"]["DepartureDate"]%> <br>
+                Departure Flight Carrier: <%= flight_package["OutboundLeg"]["Carriers"][0] %> <br>
+                Return Date: <%= flight_package["InboundLeg"]["DepartureDate"] %><br>
+                Return Flight Carrier: <%= flight_package["InboundLeg"]["Carriers"][0] %><br>
+                Price : <%=  flight_package["MinPrice"]%>
                 </div>
-               <input id="departing_id" name="departing_id" value= <%= "#{flight_package[0].id}" %> type="hidden" />
-               <input id="return_id" name="return_id" value= <%= "#{flight_package[1].id}" %> type="hidden" />
+               <input id="quote_id" name="quote_id" value= <%= "#{flight_package["QuoteId"]}" %> type="hidden" />
               <%= submit_tag ("Save flight")%>
               </div>
           </div>
