--- a/app/views/quotes/search_results.html.erb
+++ b/app/views/quotes/search_results.html.erb
@@ -5,19 +5,25 @@
           <div class="col-md-6">
             <div class="whitebox">
               <h1> <%= "Package #{index+1}" %>  </h1>
-                <div class= "p2">
-                Destination: <%= flight_package["OutboundLeg"]["DestinationCity"]%>, <%= flight_package["OutboundLeg"]["DestinationCountry"] %> <br>
+              <div class= "p2">
+                Destination: <%= flight_package["InboundLeg"]["OriginCity"]%>, <%= flight_package["OutboundLeg"]["DestinationCountry"] %> <br>
+                <input name="quote[destination]" value= <%= flight_package["InboundLeg"]["OriginCity"]%> type="hidden" />
+                <input name="quote[destination_country]" value= <%= flight_package["OutboundLeg"]["DestinationCountry"] %> type="hidden" />
                 Departure Date: <%= flight_package["OutboundLeg"]["DepartureDate"].to_date%> <br>
+                <input name="quote[departure_date]" value= <%= flight_package["OutboundLeg"]["DepartureDate"] %> type="hidden" />
                 <% if flight_package["OutboundLeg"]["Carriers"][0] %>
                 Departure Flight Carrier: <%= flight_package["OutboundLeg"]["Carriers"][0] %> <br>
+                <input name="quote[outbound_carrier]" value= <%= flight_package["OutboundLeg"]["Carriers"][0] %> type="hidden" />
                 <% end %>
                 Return Date: <%= flight_package["InboundLeg"]["DepartureDate"].to_date%><br>
+                <input name="quote[return_date]" value= <%= flight_package["InboundLeg"]["DepartureDate"] %> type="hidden" />
                 <% if flight_package["InboundLeg"]["Carriers"][0] %>
                 Return Flight Carrier: <%= flight_package["InboundLeg"]["Carriers"][0] %><br>
+                <input name="quote[return_carrier]" value= <%= flight_package["InboundLeg"]["Carriers"][0] %> type="hidden" />
                 <% end %>
                 Price : <%=  flight_package["MinPrice"]%>
-                </div>
-               <input id="quote_id" name="quote_id" value= <%= "#{flight_package["QuoteId"]}" %> type="hidden" />
+                <input name="quote[price]" value= <%= flight_package["MinPrice"] %> type="hidden" />
+              </div>
               <%= submit_tag ("Save flight")%>
               </div>
           </div>
