styled quotes/search_results

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -24,7 +24,8 @@ textarea {
   opacity: 0.8; 
   background-color: #EFEADE;
   border-radius: 15px;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
+  margin-top: 3em; 
 }
 
 .whitebox h1 {
