--- a/app/views/quotes/search_results.html.erb
+++ b/app/views/quotes/search_results.html.erb
@@ -1,6 +1,14 @@
 <div class= "container-fluid">
-  <% @parsed_quotes.each_with_index do |quotes, index| %>
-    <h1> <%= "Package #{index+1}" %>  </h1>
-    <%= render partial: "partials/quote", object: quotes %>
-  <%end%>
+ <div class="row">
+    <% @parsed_quotes.each_with_index do |quotes, index| %>
+      <div class="col-md-6">
+        <div class="whitebox">
+          <div class= "p2">
+            <h1> <%= "Package #{index+1}" %>  </h1>
+            <%= render partial: "partials/quote", object: quotes %>
+           </div>
+        </div>
+      </div>
+    <%end%>
+  </div>
 </div>
