--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,17 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/">Home</a></li>
             <% if logged_in? %>
-              <li><%=link_to "My Flights", "/users/#{@current_user.id}/flights"%></li> 
-              <li><%= link_to "Log out", logout_path, method: "delete" %></li> 
+              <li><%=link_to "My Flights", "/users/#{@current_user.id}/quotes"%></li> 
+              <li><%= link_to "Log out", logout_path, method: "delete" %></li>
               <li><a href="/new_trip">Book A Trip</a></li>
               <p><i><%= "#{@current_user.name} is logged into WanderList" %></i></p>
             <% else %>
               <li><a href="/users/new">Sign Up</a> </li>
               <li><a href="/login">Sign In</a></li>
-            <% end %>  
+            <% end %>
           </ul>
-        </nav> 
-      </div> 
+        </nav>
+      </div>
     </header>
     <div class="container">
       <%= yield %>
