--- a/app/views/quotes/new_trip.html.erb
+++ b/app/views/quotes/new_trip.html.erb
@@ -1,6 +1,9 @@
 <%= form_tag("/find_flights", method: "get") do %>
 <div class='center'>
-<h1>Your adventure awaits...</h1> 
+<h1>Your adventure awaits...</h1>
+<% if flash[:notice] %>
+  <div class="notice"><h2 style="color:yellow"><strong><%= flash[:notice] %></h2></strong></div>
+<% end %>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <p> What's your budget? </p>
@@ -17,11 +20,6 @@
 
       <%= submit_tag("Find Flights")%>
       <% end %>
-      <div id="error-message">
-        <p><%= flash[:notice] %></p>
-      </div>
     </div>
   </div>
 </div>
-
-
