styled class .p2 to center text

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -88,6 +88,10 @@ p {
   padding-top: 10px;
 }
 
+.p2{
+  text-align: center;
+}
+
 body > div > div > form > div > div > div > div {
   padding-left: 5.5em;
 }
