--- a/app/views/partials/_quote.html.erb
+++ b/app/views/partials/_quote.html.erb
@@ -21,5 +21,6 @@
 
     Price : <%=  quote["MinPrice"]%>
     <%= hidden_field_tag "quote[price]", quote["MinPrice"] %>
-    <%= submit_tag("Save flight")%>
+    
+    <%= submit_tag("Save flight", class: 'btn btn-primary center-block')%>
 <% end %>
