--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
       <%= f.text_field :name %><br>
       <%= f.label :password %>
       <%= f.password_field :password %><br>
-      <%= f.submit 'Create User' %>
+      <%= f.submit 'Create User', class: 'btn btn-primary center-block' %>
       <% if flash[:message] %>
         <ul>
           <% flash[:message].each do |error| %>
