fix find flights button styling

--- a/app/views/quotes/new_trip.html.erb
+++ b/app/views/quotes/new_trip.html.erb
@@ -18,7 +18,7 @@
 
       <p><input type="text" data-provide='datepicker' name='user[return]' ></p>
 
-      <%= submit_tag("Find Flights")%>
+      <%= submit_tag("Find Flights", class: "btn btn-primary center-block") %>
       <% end %>
     </div>
   </div>
