--- a/app/views/quotes/search_results.html.erb
+++ b/app/views/quotes/search_results.html.erb
@@ -1,5 +1,8 @@
 <div class= "container-fluid">
  <div class="row">
+   <% if @parsed_quotes.empty? %>
+    <a href="https://www.youtube.com/watch?v=kE03lYoVpFg" target="_blank"><h1 style="color:yellow"><strong><%= "These are not the quotes you are looking for..."%></h1></strong></a>
+    <% end %>
     <% @parsed_quotes.each_with_index do |quotes, index| %>
       <div class="col-md-6">
         <div class="whitebox">
