--- a/app/views/quotes/new_trip.html.erb
+++ b/app/views/quotes/new_trip.html.erb
@@ -8,17 +8,17 @@
     <div class="col-md-6 col-md-offset-3">
       <p> What's your budget? </p>
 
-      <p><%= text_field_tag 'user[budget]' %></p>
+      <p><%= text_field_tag 'query[budget]' %></p>
       <p> Where are you flying from? </p>
-      <p><%= text_field_tag 'user[city]'  %></p>
+      <p><%= text_field_tag 'query[city]'  %></p>
       <p> What's your departure date? </p>
 
-      <p><input type="text" data-provide='datepicker' name='user[departure]' ></p>
+      <p><input type="text" data-provide='datepicker' name='query[departure]' ></p>
       <p> What's your return date? </p>
 
-      <p><input type="text" data-provide='datepicker' name='user[return]' ></p>
+      <p><input type="text" data-provide='datepicker' name='query[return]' ></p>
 
-      <%= submit_tag("Find Flights")%>
+      <%= submit_tag("Find Flights", class: 'btn btn-primary center-block') %>
       <% end %>
     </div>
   </div>
