moved prepare_quotes to service object

--- a/app/views/quotes/new_trip.html.erb
+++ b/app/views/quotes/new_trip.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("/find_flights", method: "get") do %>
+<%= form_tag("/find_flights", method: "GET") do %>
 <div class='center'>
   <h1>Your adventure awaits...</h1>
   <% if flash[:notice] %>
