--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
             <li><a href="/">Home</a></li>
             <% if logged_in? %>
               <li><%=link_to "My Flights", "/users/#{@current_user.id}/quotes"%></li>
-              <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+              <li><%= link_to "Log Out", logout_path, method: "delete" %></li>
               <li><a href="/new_trip">Book A Trip</a></li>
               <p><i><%= "#{@current_user.name} is logged into WanderList" %></i></p>
             <% else %>
